[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/gauges.gd" type="Script" id=1]
[ext_resource path="res://src/gauge.tscn" type="PackedScene" id=2]

[sub_resource type="ButtonGroup" id=1]

[node name="Gauges" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 90.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 68.0
margin_bottom = 24.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer" groups=["SelectButtons"]]
margin_right = 24.0
margin_bottom = 24.0
pressed = true
group = SubResource( 1 )

[node name="Gauge" parent="VBoxContainer/HBoxContainer" groups=["Gauges"] instance=ExtResource( 2 )]
margin_left = 28.0
margin_right = 68.0
margin_bottom = 24.0
num_bars = 15
bar_height = 35.0
bar_width = 40.0
corner_radius = 5
rounded_bars = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 68.0
margin_bottom = 68.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2" groups=["SelectButtons"]]
margin_right = 24.0
margin_bottom = 24.0
group = SubResource( 1 )

[node name="Gauge" parent="VBoxContainer/HBoxContainer2" groups=["Gauges"] instance=ExtResource( 2 )]
margin_left = 28.0
margin_right = 68.0
margin_bottom = 24.0
num_bars = 10
h_separation = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 68.0
margin_bottom = 112.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer3" groups=["SelectButtons"]]
margin_right = 24.0
margin_bottom = 24.0
group = SubResource( 1 )

[node name="Gauge" parent="VBoxContainer/HBoxContainer3" groups=["Gauges"] instance=ExtResource( 2 )]
margin_left = 28.0
margin_right = 68.0
margin_bottom = 24.0
num_bars = 13
bar_height = 60.0
bar_width = 45.0
horizontal_shrink = true
h_separation = 10
inverse_color = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 68.0
margin_bottom = 156.0
size_flags_horizontal = 0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer4" groups=["SelectButtons"]]
margin_right = 24.0
margin_bottom = 24.0
group = SubResource( 1 )

[node name="Gauge3" parent="VBoxContainer/HBoxContainer4" groups=["Gauges"] instance=ExtResource( 2 )]
margin_left = 28.0
margin_right = 68.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 0 )
is_vertical = true
num_bars = 7
bar_height = 20.0
bar_width = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -325.0
margin_top = -126.0
margin_right = 325.0
custom_constants/separation = 150

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 150.0
margin_bottom = 126.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 24.0

[node name="PartialButton" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_top = 5.0
margin_right = 99.0
margin_bottom = 19.0
text = "Partial bars"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 150.0
margin_bottom = 52.0

[node name="FadeButton" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 5.0
margin_right = 99.0
margin_bottom = 19.0
text = "Fade mode"

[node name="Slider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 150.0
margin_bottom = 72.0
rect_min_size = Vector2( 150, 0 )

[connection signal="toggled" from="HBoxContainer/VBoxContainer/HBoxContainer2/PartialButton" to="." method="_on_PartialButton_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/HBoxContainer/FadeButton" to="." method="_on_FadeButton_toggled"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Slider" to="." method="_on_Slider_value_changed"]
